fix bug in lower resolution rendering of forcast
the forcast card was overlapping that of the app itself at lower resolutions

--- a/src/Forecast.css
+++ b/src/Forecast.css
@@ -1,6 +1,6 @@
 .week-ahead {
   color: #f2f2f1;
-  display: inline-flex;
+
   text-align: center;
 }
 .forecast-temperature {
