--- a/src/Weather.css
+++ b/src/Weather.css
@@ -10,7 +10,7 @@
 .Weather .card-body {
   background-image: linear-gradient(to top, #f2f2f1, #4dd1e2, #15a3b8);
   border-radius: 22px;
-  min-width: 480px;
+  
 
   background-blend-mode: normal, color-burn;
   border: 2px solid #f2f2f1;
